# sparta-data11-advanced-project

./: .gitignore  README.md  main.py  pyproject.toml
Geunsu/: Testing.ipynb  Testing3.ipynb  Testing4.ipynb  Testing5.ipynb  막쓰기.ipynb
Haeun/: Data_Modeling_product-1_v1.ipynb  Data_Modeling_product-1_v2.ipynb  Data_Modeling_product-1_v3.ipynb  Data_Modeling_product-1_최적화기준을 recall로 변경.ipynb  Data_Pre-stats_product-1_using_ML-data_v2.ipynb  Data_Pre-stats_product-1_using_ML-data_v3.ipynb  Data_Pre-stats_product-1_using_ML-data_v4.ipynb  Data_Pre-stats_product-2_using_ML-data_v2.ipynb  Data_Pre-stats_product-2_using_ML-data_v3.ipynb  Data_Preprocessing_product-1_v1.ipynb  Data_Profiling.ipynb  README.md  통계_제품1_발표용 자료 제작.ipynb  통계_제품2_발표용 자료 모음.ipynb
Sooin/: ML_product2_PR-AUC.ipynb  ML_product2_recall버전.ipynb  README.md  practice.ipynb
common-file/: PART1_데이터전처리.ipynb  PART1_데이터전처리_ver1.ipynb  PART1_데이터전처리_제품1_v2.ipynb  PART1_데이터전처리_제품2_v2.ipynb  PART1_데이터전처리_제품2_v3.ipynb  PART2_통계_제품1_v1.ipynb  PART2_통계_제품1_v4.ipynb  PART2_통계_제품1_v5.ipynb  PART2_통계_제품2_v1.ipynb  PART2_통계_제품2_v4.ipynb  PART2_통계_제품2_v5.ipynb  PART3_머신러닝_제품1_v1.ipynb  PART3_머신러닝_제품1_v2.ipynb  PART3_머신러닝_제품2_v1.ipynb  PART3_머신러닝_제품2_v2.ipynb  README.md  통계_제품2_수정_v5.ipynb
leegolem/: Data_Preprocessing_product-2_v1.ipynb  PART1_데이터전처리_product_2.ipynb  PART2_통계_product_2.ipynb  PART2_통계_product_2_v2.ipynb  PART2_통계_product_2_v4.ipynb  README.md  data-preprocessing_lee.ipynb  data.ipynb  lee_test_2.ipynb  part 1_통계_product_2.ipynb  test.ipynb  이상치 처리 기준 고민.ipynb  통계_제품1_그래프-표 생성기.ipynb  통계_제품1_수정_v3.ipynb  (+6 more)
(+2 files in other folders)
